# el5206-CBIR

./: CMakeLists.txt  README.txt  main.cpp  processImages.cpp
