cmake_minimum_required(VERSION 3.5.1)
project(ProyectoImagenes)
set(CMAKE_CXX_STANDARD 11)
include_directories (include)
find_package( OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})
add_executable(proyectoImagenes main.cpp)
add_executable(processDB processImages.cpp)
target_link_libraries( proyectoImagenes ${OpenCV_LIBS} )
target_link_libraries( processDB ${OpenCV_LIBS} )
